--- a/svg/.agent-rule.md
+++ b/svg/.agent-rule.md
@@ -51,3 +51,13 @@ Rule 7: 状态可观测原则
 每步状态变更打印结构化日志（含thread_id与node_name）
 关键决策节点（工具调用、LLM输出）必须埋点
 LangGraph图结构可视化导出（Mermaid或PNG）
+
+Rule 8: 环境标准化原则（UV-First）
+强制使用uv作为唯一环境管理器，禁止pip/poetry/conda混用
+包管理：统一使用uv pip install / uv add，禁止直接使用pip
+依赖声明：仅使用pyproject.toml管理依赖，禁止requirements.txt
+版本锁定：必须提交uv.lock文件到Git，确保构建100%可复现
+虚拟环境：固定使用.venv目录（uv默认），通过uv run或.venv/bin/python执行，禁止全局Python安装依赖
+Python版本：固定Python版本在.python-version和pyproject.toml的requires-python字段
+脚本入口：所有CLI命令定义在pyproject.toml的[project.scripts]，使用uv run <command>执行，禁止手动写bash脚本
+开发工作流：使用uv run直接运行代码，无需手动激活虚拟环境
