--- a/svg/.agent-rule.md
+++ b/svg/.agent-rule.md
@@ -61,3 +61,12 @@ Rule 8: 环境标准化原则（UV-First）
 Python版本：固定Python版本在.python-version和pyproject.toml的requires-python字段
 脚本入口：所有CLI命令定义在pyproject.toml的[project.scripts]，使用uv run <command>执行，禁止手动写bash脚本
 开发工作流：使用uv run直接运行代码，无需手动激活虚拟环境
+
+Rule 9: 环境变量隔离原则（Dotenv Management）
+敏感配置与业务配置分离，强制.env文件管理
+强制.env文件：所有敏感信息（API密钥、数据库密码、私钥）必须通过.env文件注入，禁止直接写入YAML/JSON配置或代码
+配置层级边界：.env管理敏感凭证和基础设施配置（密钥、URL、Token），config/*.yaml管理业务逻辑配置（温度、超时、提示词路径）
+加载机制：必须使用python-dotenv或pydantic-settings在应用启动时自动加载.env，禁止在代码中手动os.getenv分散读取
+版本控制：.env必须加入.gitignore，绝对禁止提交；必须提供.env.example作为模板（包含所有必需Key，值用<PLACEHOLDER>填充）
+多环境隔离：支持.env.development、.env.production、.env.local，通过ENV=production uv run python...自动切换加载
+类型安全：使用pydantic-settings定义Settings类，提供字段验证和类型提示，禁止裸字符串传递密钥
